# drs2p

./: .gitignore  README.md  example.yaml  pyproject.toml  requirements.txt  run_example.bat
example/: Sample_1.txt  Sample_1_.csv  Sample_2.txt  Sample_2_.csv  Sample_3.txt  Sample_3_.csv
src/: __init__.py  config.py  debug.py  derivatives.py  helpers.py  main.py  roi_detection.py  run_example.bat  traces.py  trigger.py
